// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders the Datasource picker component fetches the datasources and selects Opensearch as source 1`] = `
<div
  aria-expanded={false}
  aria-haspopup="listbox"
  className="euiComboBox"
  onKeyDown={[Function]}
  role="combobox"
>
  <div
    className="euiFormControlLayout"
  >
    <div
      className="euiFormControlLayout__childrenWrapper"
    >
      <div
        className="euiComboBox__inputWrap euiComboBox__inputWrap--noWrap"
        data-test-subj="comboBoxInput"
        onClick={[Function]}
        tabIndex={-1}
      >
        <span
          className="euiComboBoxPill euiComboBoxPill--plainText"
        >
          OpenSearch
        </span>
        <div
          className="euiComboBox__input"
          style={
            Object {
              "display": "inline-block",
              "fontSize": 14,
            }
          }
        >
          <input
            aria-controls=""
            data-test-subj="comboBoxSearchInput"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            role="textbox"
            style={
              Object {
                "boxSizing": "content-box",
                "width": "2px",
              }
            }
            value=""
          />
          <div
            style={
              Object {
                "height": 0,
                "left": 0,
                "overflow": "scroll",
                "position": "absolute",
                "top": 0,
                "visibility": "hidden",
                "whiteSpace": "pre",
              }
            }
          />
        </div>
      </div>
      <div
        className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
      >
        <button
          aria-label="Open list of options"
          className="euiFormControlLayoutCustomIcon euiFormControlLayoutCustomIcon--clickable"
          data-test-subj="comboBoxToggleListButton"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
            focusable="false"
            height={16}
            role="img"
            style={null}
            viewBox="0 0 16 16"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
              fillRule="non-zero"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders the Datasource picker component fetches the datasources and selects S3glue as source 1`] = `
<div
  aria-expanded={false}
  aria-haspopup="listbox"
  className="euiComboBox"
  onKeyDown={[Function]}
  role="combobox"
>
  <div
    className="euiFormControlLayout"
  >
    <div
      className="euiFormControlLayout__childrenWrapper"
    >
      <div
        className="euiComboBox__inputWrap euiComboBox__inputWrap--noWrap"
        data-test-subj="comboBoxInput"
        onClick={[Function]}
        tabIndex={-1}
      >
        <span
          className="euiComboBoxPill euiComboBoxPill--plainText"
        >
          OpenSearch
        </span>
        <div
          className="euiComboBox__input"
          style={
            Object {
              "display": "inline-block",
              "fontSize": 14,
            }
          }
        >
          <input
            aria-controls=""
            data-test-subj="comboBoxSearchInput"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            role="textbox"
            style={
              Object {
                "boxSizing": "content-box",
                "width": "2px",
              }
            }
            value=""
          />
          <div
            style={
              Object {
                "height": 0,
                "left": 0,
                "overflow": "scroll",
                "position": "absolute",
                "top": 0,
                "visibility": "hidden",
                "whiteSpace": "pre",
              }
            }
          />
        </div>
      </div>
      <div
        className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
      >
        <button
          aria-label="Open list of options"
          className="euiFormControlLayoutCustomIcon euiFormControlLayoutCustomIcon--clickable"
          data-test-subj="comboBoxToggleListButton"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
            focusable="false"
            height={16}
            role="img"
            style={null}
            viewBox="0 0 16 16"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;
